# RecruitBuddy-App

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
frontend/: Dockerfile  README.md  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CandidatePortal.tsx  RecruiterDashboard.tsx
frontend/src/utils/: pistonClient.ts
