[package]
name = "skill_validation_backend"
version = "0.1.0"
edition = "2021"

# I'm using these dependencies to build a simple API for my internship application
[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }